--- a/package.json
+++ b/package.json
@@ -16,10 +16,14 @@
     "@mui/material": "^7.3.6",
     "@tailwindcss/vite": "^4.1.18",
     "axios": "^1.13.2",
+    "country-flag-icons": "^1.6.4",
     "framer-motion": "^12.23.26",
+    "i18next": "^25.7.4",
+    "i18next-browser-languagedetector": "^8.2.0",
     "nodemailer": "^7.0.12",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-i18next": "^16.5.1",
     "react-icons": "^5.5.0",
     "tailwindcss": "^4.1.18"
   },
