--- a/.vercel/project.json
+++ b/.vercel/project.json
@@ -1,1 +1,1 @@
-{"projectId":"prj_Svt2jYc2hxKuN0zU687tirDfa3sU","orgId":"team_WzwS8fb2mYXwtYM99lVSW0Cf","projectName":"kevin-portfolio"}
+{"projectId":"prj_ZH0kCZPRJGQDjK44Zk35hTLIxLWR","orgId":"team_WzwS8fb2mYXwtYM99lVSW0Cf","projectName":"kevin-third-portfolio"}
